--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </main>
 
     <footer>
-        <p>© 2025 TradeRiser. Made with 💖 for traders.</p>
+        <p>© 2025 Mature's Trade. Made with 💖 for traders.</p>
         <a href="#">Support</a> | <a href="#">Terms</a>
     </footer>
 
